Prevent snapping resized window to hidden windows

Workspace::adjustWindowPosition() properly handles hidden windows and it
also excludes more window types, but Workspace::adjustWindowSize() only
shares a small fraction of those checks due to getting out of sync because
of code duplication.

BUG: 461987


(cherry picked from commit 260319c30fbd2d97f3d25815e61c23b875011c79)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>